# fcitx5-demo

./: CMakeLists.txt  readme.md
debian/: README.Debian  README.source  changelog  control  copyright  fcitx5-demo.cron.d.ex  fcitx5-demo.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
kimpanel-ui/: CMakeLists.txt
kimpanel-ui/main/: CMakeLists.txt  inputPanel.cpp  inputPanel.h  main.cpp  org.fcitx.preedit.xml  statusarea.cpp  statusarea.h
kimpanel-ui/main/icon/: res.qrc
kimpanel-ui/plugin/: CMakeLists.txt  kimpanel.cpp  kimpanel.h  kimpanelagent.cpp  kimpanelagent.h
quwei-inputmethod/: CMakeLists.txt
quwei-inputmethod/src/: CMakeLists.txt  quwei.cpp  quwei.h  quweidbus.cpp  quweidbus.h
